# topological-benchmark

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: fuzz_tda_baselines.py  run_ablation.py  summarize_ablation.py
tda_shapes/: __init__.py  composite.py  dataset.py  images.py  noise.py  shapes.py  visualize.py
tda_shapes/ml/: __init__.py  benchmark.py  data.py  metrics.py  ph.py  pointnet.py  pointnet2.py
tests/: test_composite.py  test_dataset.py  test_images.py  test_ml.py  test_shapes.py  test_visualize.py
